fix button z-index

--- a/skalene.css
+++ b/skalene.css
@@ -118,6 +118,7 @@
 .sk-button:focus {
   outline: 2px solid var(--focus-bg);
   border-color: var(--focus-bg);
+  z-index: 1;
 }
 
 .sk-button:active {
@@ -137,6 +138,8 @@
 .sk-button-group > .sk-button {
   border-radius: 0;
   margin-right: -1px;
+  position: relative;
+  z-index: 0;
 }
 
 .sk-button-group > .sk-button:first-of-type {
